--- a/its-my-life-front/package.json
+++ b/its-my-life-front/package.json
@@ -45,5 +45,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@svgr/webpack": "^6.5.1",
+    "typescript-plugin-css-modules": "^4.1.1"
   }
 }
